@@ -413,7 +413,7 @@ int CppCheckExecutor::check_internal(const Settings& settings, Suppressions& sup
 
     returnValue |= cppcheck.analyseWholeProgram(settings.buildDir, mFiles, mFileSettings, stdLogger.getCtuInfo());
 
-    if (settings.severity.isEnabled(Severity::information) || settings.checkConfiguration) {
+    if (settings.checks.isEnabled(Checks::unmatchedSuppression) || settings.checkConfiguration) {
         const bool err = reportUnmatchedSuppressions(settings, supprs.nomsg, mFiles, mFileSettings, stdLogger);
         if (err && returnValue == 0)
             returnValue = settings.exitCode;
