@@ -26,4 +26,5 @@ Other:
 - Removed deprecated platforms `unix32-unsigned` and `unix64-unsigned`.
 - Updated Qt to 6.10.0 (official Windows release only).
 - The official Windows binary is now built against Boost 1.89 for increased performance.
+- `unmatchedSuppression` has been de-coupled from `information` and needs to be enabled seperately now.
 -
